--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apiman",
   "description": "Protocol-agnostic API methods manager",
-  "version": "0.1.2",
+  "version": "0.1.3",
   
   "author": "kolypto <kolypto@gmail.com>",
   "license": "MIT",
@@ -21,7 +21,7 @@
   ],
   
   "dependencies": {
-    "underscore": "1.5.x",
+    "lodash": "2.4.x",
     "async": "0.2.x"
   },
   "devDependencies": {
