--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "devDependencies": {
     "nodeunit": "0.8.x",
     "connect": "2.12.x",
-    "uid2": "0.0.x"
+    "uid2": "0.0.x",
+    "express": "3.4.x",
+    "request": "2.30.x"
   },
   "engines": {
     "node": ">= 0.10.0"
